# breseq

./: .#HybridReads.pm.1.9  .#breseq.pl.1.80  .gitignore  .hgignore  .travis.yml  AUTHORS  AlignmentCorrection.pm  CHANGES  CITATION.cff  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  DEVELOPER  Dropbox-breseq.files  Dropbox-breseq.includes  ErrorCalibration.pm  INSTALL  Jamroot  LICENSE  Makefile  Makefile.am  Makefile.am-withperl  Makefile.bjam  Makefile.in  MutationIdentification.pm  NOTICE  README  README-BINARY  README.md  ROADMAP  TODO  aclocal.m4  binarydist.sh  bootstrap.sh  breseq.pl  breseq.tmproj  config.status  configure  (+14 more)
0.40.1/: 404.html  index.html  sitemap.xml
autoconf/: bootstrap.sh  configure.in
autoconf/src/: Makefile.am  alignment.cpp  calc_trims_cmdline.cpp  error_count.cpp  identify_mutations_cmdline.cpp
autoconf/src/breseq/: identify_mutations.h
docs/: acknowledgments.md  bibliography.md  faq.md  genomediff-file-format.md  index.md  installation.md  introduction.md  methods.md  output.md  reference-sequence-file-formats.md  test-drive.md  tutorial-barcoded-targeted.md  tutorial-clones.md  tutorial-curation-automating.md  tutorial-curation-common-cases.md  tutorial-curation-ecoli-ltee.md  tutorial-curation-editing-genomediff-files.md  tutorial-curation-exploring-aligned-reads.md  tutorial-curation-running-breseq.md  tutorial-curation-validation.md  tutorial-curation.md  tutorial-populations.md  usage-breseq.md  (+1 more)
src/breseq/: Makefile.am  alignment.cpp  alignment.h  alignment_output.cpp  alignment_output.h  anyoption.cpp  anyoption.h  breseq_cmdline.cpp  calculate_trims.cpp  calculate_trims.h  candidate_junctions.cpp  candidate_junctions.h  cn_evidence.cpp  cn_evidence.h  common.h  contingency_loci.cpp  contingency_loci.h  counted_ptr.h  coverage_distribution.cpp  coverage_distribution.h  coverage_output.cpp  coverage_output.h  coverage_table_cmdline.cpp  ctpl_stl.h  dp_evidence.cpp  dp_evidence.h  error_count.cpp  fasta.cpp  fasta.h  fastq.cpp  fastq.h  file_parse_errors.h  flagged_regions.cpp  gdtools_cmdline.cpp  genome_diff.cpp  genome_diff_entry.cpp  genome_diff_entry.h  identify_mutations.cpp  identify_mutations.h  json.hpp  (+20 more)
src/breseq/libbreseq/: anyoption.h  candidate_junctions.h  common.h  coverage_distribution.h  coverage_output.h  error_count.h  fastq.h  flagged_regions.h  genome_diff.h  identify_mutations.h  pileup.h  reference_sequence.h
src/c/: MacOSX_development_notes.txt  Makefile  Makefile.am  calc_trims  error_count  identify_mutations
src/c/breseq/: Makefile.am  alignment.cpp  alignment_output.cpp  annotated_sequence.cpp  anyoption.cpp  bam2aln_cmd_line.cpp  bam2aln_cmdline.cpp  breseq_cmdline.cpp  breseq_utils_cmdline.cpp  calc_trims_cmdline.cpp  calculate_trims.cpp  candidate_junctions.cpp  chisquare.cpp  cn_evidence.cpp  combined_circos.conf  contingency_loci.cpp  convert_genbank_cmdline.cpp  coverage_distribution.cpp  coverage_distribution.r  coverage_output.cpp  coverage_table_cmdline.cpp  error_count.cpp  error_count_cmdline.cpp  example_genbank.cpp  fasta.cpp  fastq.cpp  fastq_utils_cmdline.cpp  flagged_regions.cpp  gdtools_cmdline.cpp  genome_diff.cpp  genome_diff_entry.cpp  identify_mutations.cpp  identify_mutations_cmdline.cpp  identify_repeats.cpp  ideogram.conf  indels.conf  karyotype.and.layout.conf  mobs.conf  mutation_predictor.cpp  mutations.conf  (+20 more)
src/c/breseq-1.0/: Makefile.am  error_count_cmdline.cpp
src/c/breseq-1.0/breseq/: pileup_base.h
src/c/breseq-10.5.xcodeproj/: project.pbxproj
src/c/breseq-10.6.xcodeproj/: project.pbxproj
src/c/breseq.xcodeproj/: dk.mode1v3  dk.pbxuser  project.pbxproj
src/c/breseq.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/c/breseq.xcodeproj/xcshareddata/xcschemes/: all.xcscheme  bam2aln.xcscheme  breseq_cmdline.xcscheme  libbreseq.xcscheme  samtools.xcscheme
src/c/breseq/breseq/: alignment.h  alignment_output.h  annotated_sequence.h  anyoption.h  calculate_trims.h  candidate_junctions.h  chisquare.h  common.h  contingency_loci.h  coverage_distribution.h  coverage_output.h  error_count.h  fasta.h  fastq.h  genome_diff.h  identify_mutations.h  mutation_predictor.h  output.h  pileup.h  pileup_base.h  resolve_alignments.h  settings.h  storable.h  tabulate_coverage.h
src/c/breseq/libbreseq/: alignment.h  alignment_output.h  annotated_sequence.h  anyoption.h  calculate_trims.h  candidate_junctions.h  chisquare.h  cn_evidence.h  common.h  contingency_loci.h  counted_ptr.h  coverage_distribution.h  coverage_output.h  ctpl_stl.h  error_count.h  fasta.h  fastq.h  file_parse_errors.h  flagged_regions.h  genome_diff.h  genome_diff_entry.h  gzstream.h  identify_mutations.h  identify_repeats.h  json.hpp  mutation_predictor.h  nw.h  output.h  pgzstream.h  pileup.h  pileup_base.h  reference_sequence.h  resolve_alignments.h  rna_seq.h  samtools_commands.h  settings.h  simulated_read.h  soft_clipping.h  stats.h  storable.h  (+1 more)
src/c/calc_trims/src/: main.cpp
src/c/config/: Debug.xcconfig  Release.xcconfig  Shared.xcconfig
src/c/error_count/include/: common.h  error_count.h  pileup.h
src/c/error_count/src/: error_count.cpp  main.cpp  pileup.cpp
src/c/etc/: debug.xcconfig
src/c/identify_mutations/: Jamfile
src/c/identify_mutations/include/: identify_mutations.h
src/c/identify_mutations/src/: identify_mutations.cpp  main.cpp
src/c/libbreseq/: Jamfile
src/c/libbreseq/include/breseq/: alignment.h  common.h  error_count.h  genome_diff.h  identify_mutations.h  pileup.h
src/c/libbreseq/src/: alignment.cpp  error_count.cpp  genome_diff.cpp  identify_mutations.cpp  pileup.cpp  pileup_base.cpp
src/c/samtools-0.1.7a/: Jamfile  Makefile.am  samtools
src/c/samtools-0.1.7a/misc/: maq2sam-long  maq2sam-short  md5fa  md5sum-lite  wgsim
src/c/samtools-0.1.7a/misc/maq2sam-long.dSYM/Contents/: Info.plist
src/c/samtools-0.1.7a/misc/maq2sam-long.dSYM/Contents/Resources/DWARF/: maq2sam-long
src/c/samtools-0.1.7a/misc/maq2sam-short.dSYM/Contents/: Info.plist
src/c/samtools-0.1.7a/misc/maq2sam-short.dSYM/Contents/Resources/DWARF/: maq2sam-short
(+464 files in other folders)
